# auto-fl

./: API.env  README.md  pyproject.toml  run.py  setup.py
auto-fl/: environment.yml
auto-fl/autofl.egg-info/: PKG-INFO  SOURCES.txt
auto-fl/backends/: __init__.py
auto-fl/backends/pytorch/: pytorchfed.py
auto-fl/backends/tensorflow/: tff.py
fl-venv/: pyvenv.cfg
